# Reparo

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
src/: autofix_sonar.rs  claude.rs  config.rs  engine.rs  execution_log.rs  git.rs  main.rs  orchestrator.rs  pact.rs  report.rs  retry.rs  runner.rs  sonar.rs  state.rs  usage.rs  yaml_config.rs
src/compliance/: mcdc.rs  mod.rs  report.rs
src/linter/: checkstyle.rs  clippy.rs  eslint.rs  mod.rs  ruff.rs
src/orchestrator/: coverage.rs  dedup.rs  deterministic.rs  fix_loop.rs  grouping.rs  helpers.rs  mod.rs  overlap.rs  parallel.rs  risk_assessment.rs  worktree_pool.rs
test-project/: pyproject.toml  sonar-project.properties
test-project/src/: calculator.py
test-project/tests/: test_calculator.py
