[package]
name = "reparo"
version = "0.1.0"
edition = "2021"
description = "Automated SonarQube technical debt fixer using Claude"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
which = "7"
glob = "0.3"
serde_yaml = "0.9"
regex = "1"

[dev-dependencies]
tempfile = "3"
